--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
         <app-neon-form></app-neon-form>
 </div>
  -->
- <!-- <app-neon-form></app-neon-form> -->
-<app-neon-list></app-neon-list>
+        <app-neon-form></app-neon-form>
+        <!-- <app-neon-list></app-neon-list> -->
+<!-- <app-admin></app-admin> -->
