recap et commaner

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="row adminContainer">
+<div class="row   ">
     <div class='admin-list-title col-12'>
       <h2 class="admin-title">SUR DU GRADUR FAIS DES POMPES DES TRACTIONS</h2>
     </div>
