--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -52,11 +52,11 @@ h2 {
       border-radius: 50%;
   
       font-size: 10px;
-      background-color: pink;
+      background-color: #D61F6A;
       text-align: center;
       display: inline-block;
       width: 20px;
-      color: #000b31 !important;
+      color: white !important;
       height: 20px;
       margin-right: 3%;
   }
