--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -64,6 +64,28 @@ h2 {
   flex-wrap: wrap;
 }
 
+.tiny-card {
+  margin-top: 1%;
+  width: 100%;
+  display: flex;
+  padding: 1.3rem;
+  height: 50px;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  transition: 0.4s;
+  flex-direction: row;
+}
+.big-card  {
+  margin-top: 10%;
+  width: 70%;
+  display: flex;
+  padding: 0 !important;
+  height: 250px;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  transition: 0.4s;
+  flex-direction: row;
+}
 .card {
   margin: 30px auto;
   width: 30%;
@@ -71,7 +93,6 @@ h2 {
   height: 200px;
   border-radius: 10px;
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  cursor: pointer;
   transition: 0.4s;
   flex-direction: row;
 }
@@ -83,7 +104,6 @@ h2 {
   height: 250px;
   border-radius: 10px;
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  cursor: pointer;
   transition: 0.4s;
   flex-direction: row;
 }
@@ -93,6 +113,11 @@ h2 {
   // background-color: lightgray;
   height: inherit;
   flex:1;
+}
+.big_card_content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .card_content {
@@ -142,11 +167,11 @@ border-collapse: collapse;
   border-radius: 50%;
 
   font-size: 10px;
-  background-color: pink;
+  background-color: #D61F6A;
   text-align: center;
   display: inline-block;
   width: 20px;
-  color: #000b31 !important;
+  color: white !important;
   height: 20px;
   margin-right: 3%;
 }
@@ -381,3 +406,64 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
   font-size: 11px;
   font-family: Mukta-Regular, sans-serif;
 }
+
+.commandMainCont {
+  height: 70%;
+}
+.commandBotCont {
+  height: 30%;
+  margin-top: 5%;
+}
+
+.command-form-cont {
+  display: flex;
+  flex-direction: column;
+}
+
+.command-form-card {
+  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  justify-content: flex-start   ;
+  border-radius: 7px;
+  overflow-y: scroll;
+  height: 90%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.recapList {
+  display: flex;
+  flex-direction: column; 
+   padding: 1em;
+
+  
+}
+
+.recapList div {
+  padding-bottom: 5px;
+  font-family: Mukta-Bold, sans-serif;
+  font-size: 17px;
+}
+.ttc {
+  align-self: center;
+  margin-left: 20px;
+}
+
+.ttcList {
+  background-color: #000b31;
+  height: 100%;
+  color: #F4CC20;
+  display: flex;
+  justify-content: space-between;
+    border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  width: 100%;
+}
+
+.livraisonDom{     align-self: center;
+
+  font-family: Mukta-Bold, sans-serif;
+  font-size: 17px;}
