--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -454,6 +454,7 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
   background-color: #000b31;
   height: 100%;
   color: #F4CC20;
+  font-family: Nunito-Black;
   display: flex;
   justify-content: space-between;
     border-bottom-right-radius: 10px;
