--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -235,7 +235,7 @@
 </div>
 
 
-<div class="ec-bigbox" *ngIf="commandMode && neonSelected">
+<div class="ec-bigbox-2" *ngIf="commandMode && neonSelected">
     <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="openCommand();">Précédent</button>
 
   <div class="row commandMainCont">
