--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -155,7 +155,7 @@
     </div>
 
   </div>
-  <div style="margin-top: 10%;" class="ec-bottom-row row">
+  <div class="ec-bottom-row row">
       <h1 class="ec-title">Un service sûr et complet</h1>
 
       <div class="cards-list">
@@ -228,14 +228,14 @@
 
 
 
-              
+
           </div>
   </div>
 
 </div>
 
 
-<div class="ec-bigbox-2" *ngIf="commandMode && neonSelected">
+<div class="ec-bigbox" *ngIf="commandMode && neonSelected">
     <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="openCommand();">Précédent</button>
 
   <div class="row commandMainCont">
