--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,23 @@
             <div class="login-step-container">
       
                     <h2 class="login-title">Connectez vous à votre compte</h2>
-                </div>
+
+                    <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Adresse mail</span>
+                              <input type='email' (keyup)="onChangeUserInfo('email', $event.target.value)" [value]="email"  class="basic-input "/>
+                
+                     </div>
+
+                     <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Mot de passe</span>
+                              <input type='password' (keyup)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
+
+                     </div>
+                        <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
+                            <button class="prev-btn login-btn " (click)="onLogin()" type="button" >Connexion</button> 
+                            <button  class="next-btn login-btn" (click)="goToSignUp()" type="button" >Retour</button>
+            </div>
 </div>
    
     <div class="col-4"></div>
