--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .login-container {
-    font-family: 'Nunito', sans-serif;
+    font-family: Mukta-Regular, sans-serif;
 background-color: #000b31;
 height: 100vh;
  }
@@ -10,8 +10,12 @@ height: 100vh;
     color: #000b31;
     padding-left: 10%;
     padding-right: 10%;
-
+    margin-bottom: 5%;
  
+ }
+
+ .login-row {
+     margin-bottom: 7%;
  }
  .step-container-inner {
     align-self: center;
@@ -26,8 +30,47 @@ height: 100vh;
     background-color: white;
     justify-content: flex-start   ;
     border-radius: 15px;
-    padding: 1.2rem;
+    padding: 1.5rem;
     width: 80%;
     height: 500px;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+
+.user-info-row-cont {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-info-row-title {
+ font-size: 0.8em;
+ font-family: Mukta-Regular, sans-serif;
+ padding-left: 20px;
+ padding-right: 20px;
+ color: #000B31;
+}
+
+.basic-input {
+    background-color: #F4F4F4;
+    color:  #000B31;
+    height: 35px;
+    border-radius: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: none;
+    width: 100%;
+    font-family: Mukta-Regular, sans-serif;
+    outline: none;
+}
+
+.login-btn {
+    align-self: center;
+    margin-top: 8%;
+    min-width: 200px;
+}
+
+.errorMessage {
+    color: #F44336;
+    font-family: Mukta-Bold;
+    text-align: center;
 }
