sign up connected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 
 
 <div style="position: fixed; bottom: 25px;">
+                <button (click)="logout()">Login</button>
         <button (click)="currentView = 'login'">Login</button>
         <button (click)="currentView = 'form'">Form</button>
         <button (click)="currentView = 'client'">Espace Client</button>
