--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,9 +2,9 @@
     <div class="col-4"></div>
 
     <div class="step-container-inner col-4">
+            <h1 class='login-header'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst tu veux du shit ?'}}</h1>
+            <div *ngIf="isSignIn" class="login-step-container">
 
-            <div class="login-step-container">
-      
                     <h2 class="login-title">Connectez vous à votre compte</h2>
 
                     <div class='user-info-row-cont login-row'>
@@ -21,7 +21,37 @@
                      </div>
                         <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
                             <button class="prev-btn login-btn " (click)="onLogin()" type="button" >Connexion</button> 
-                            <button  class="next-btn login-btn" (click)="goToSignUp()" type="button" >Retour</button>
+                            <button  class="next-btn login-btn" (click)="onSwitchLoginType()" type="button" >Retour</button>
+            </div>
+
+
+
+            <div *ngIf="!isSignIn" class="login-step-container">
+
+                    <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Prénom</span>
+                              <input type='text' (keyup)="onChangeUserInfoSignUp('nickname', $event.target.value)" [value]="nickname"  class="basic-input "/>
+                
+                     </div>
+                    <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Nom</span>
+                              <input type='text' (keyup)="onChangeUserInfoSignUp('name', $event.target.value)" [value]="name"  class="basic-input "/>
+                
+                     </div>
+                    <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Adresse mail</span>
+                              <input type='email' (keyup)="onChangeUserInfoSignUp('email', $event.target.value)" [value]="email"  class="basic-input "/>
+                
+                     </div>
+
+                     <div class='user-info-row-cont login-row'>
+                            <span class="user-info-row-title">Mot de passe</span>
+                              <input type='password' (keyup)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>                        <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
+
+                     </div>
+                            <button class="next-btn signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
+                            <button  class="prev-btn signup-btn" (click)="onSwitchLoginType()" type="button" >J'ai déjà un compte</button>
             </div>
 </div>
    
