added localstorage check

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
 
 
 <div style="position: fixed; bottom: 25px;">
-                <button (click)="logout()">Login</button>
-        <button (click)="currentView = 'login'">Login</button>
+                <button (click)="logout()">Logout</button>
+        <button (click)="currentView = 'login'">Login</button>  
         <button (click)="currentView = 'form'">Form</button>
         <button (click)="currentView = 'client'">Espace Client</button>
         <button (click)="currentView = 'admin'">Admin</button>
