--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,13 +9,13 @@
 
                     <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Adresse mail</span>
-                              <input type='email' (keyup)="onChangeUserInfo('email', $event.target.value)" [value]="email"  class="basic-input "/>
+                              <input type='email' (change)="onChangeUserInfo('email', $event.target.value)" [value]="email"  class="basic-input "/>
                 
                      </div>
 
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
-                              <input type='password' (keyup)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                              <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
                               <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
 
                      </div>
@@ -30,24 +30,25 @@
 
                     <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Prénom</span>
-                              <input type='text' (keyup)="onChangeUserInfoSignUp('nickname', $event.target.value)" [value]="nickname"  class="basic-input "/>
+                              <input type='text' (change)="onChangeUserInfoSignUp('nickname', $event.target.value)" [value]="nickname || ''"  class="basic-input "/>
                 
                      </div>
                     <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Nom</span>
-                              <input type='text' (keyup)="onChangeUserInfoSignUp('name', $event.target.value)" [value]="name"  class="basic-input "/>
+                              <input type='text' (change)="onChangeUserInfoSignUp('name', $event.target.value)" [value]="name || ''"  class="basic-input "/>
                 
                      </div>
                     <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Adresse mail</span>
-                              <input type='email' (keyup)="onChangeUserInfoSignUp('email', $event.target.value)" [value]="email"  class="basic-input "/>
+                              <input type='email' (change)="onChangeUserInfoSignUp('email', $event.target.value)" [value]="email"  class="basic-input "/>
                 
                      </div>
 
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
-                              <input type='password' (keyup)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
-                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>                        <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
+                              <input type='password' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>   
+                              <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
 
                      </div>
                             <button class="next-btn signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
@@ -58,3 +59,7 @@
     <div class="col-4"></div>
 
 </div>
+
+<div *ngIf="loading" class="blendContainer">
+
+    </div>
