--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -89,3 +89,17 @@ height: 100vh;
     margin-bottom: 15%;
     font-size: 2.5em;
 }
+
+
+.blendContainer{
+    position: fixed;
+    top:0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    opacity: .5;
+    z-index: 5;
+    background: white;
+    background-blend-mode: multiply;
+  }
+  
