--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -271,6 +271,20 @@ justify-content: flex-start;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
+
+.blendContainer{
+  position: fixed;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 100%;
+  opacity: .5;
+  z-index: 5;
+  background: white;
+  background-blend-mode: multiply;
+}
+
+
 .wizard-element {
     margin-top: 5% !important;
 }
