--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -53,6 +53,18 @@ h2 {
 }
 
 
+.blendContainer{
+  position: fixed;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 100%;
+  opacity: .5;
+  z-index: 5;
+  background: white;
+  background-blend-mode: multiply;
+}
+
 
 .cards-list {
   z-index: 0;
